# kafka-adapter-pipeline

./: README.md  pyproject.toml
kafka_adapter/: __init__.py  connector.py  exceptions.py  job_adapter.py  models.py
